[gd_scene load_steps=4 format=2]

[ext_resource path="res://Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://UI/shopItemPanel.gd" type="Script" id=3]

[node name="Panel1" type="Panel"]
margin_left = -72.2
margin_top = 7.56
margin_right = 71.8
margin_bottom = 211.56
script = ExtResource( 3 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 72, 88 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.2
margin_top = -22.44
margin_right = 71.8
margin_bottom = -0.440002
rect_pivot_offset = Vector2( 152.4, -5.12 )
custom_fonts/font = ExtResource( 1 )
text = "Buy"

[node name="Upgrade" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 48.2
margin_top = -51.56
margin_right = 68.2
margin_bottom = -29.56
rect_pivot_offset = Vector2( 10, 11 )
custom_fonts/font = ExtResource( 1 )
text = "+"

[node name="Price" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_top = 4.0
margin_right = 24.0
margin_bottom = 20.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 1 )
text = "Price: 1"
align = 1
autowrap = true

[node name="Level" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_top = 151.0
margin_right = 24.0
margin_bottom = 167.0
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = ExtResource( 1 )
text = "Lvl: 0"
align = 1
autowrap = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Upgrade" to="." method="_on_Upgrade_pressed"]
